Merged with other CFParseBCELConvertor code