@@ -92,11 +92,11 @@ public final class InfoVisMatrixGenerator implements IWalker {
 				final int oldWeight =
 					((Integer) this.interClassRelationships
 						.get(relationshipName)).intValue();
-				this.interClassRelationships.put(relationshipName, new Integer(
+				this.interClassRelationships.put(relationshipName, Integer.valueOf(
 					oldWeight + weight));
 			}
 			else {
-				this.interClassRelationships.put(relationshipName, new Integer(
+				this.interClassRelationships.put(relationshipName, Integer.valueOf(
 					weight));
 			}
 		}
