@@ -88,7 +88,7 @@ public class BCELInstructionFinder implements Visitor {
 		}
 		while (line != null);
 
-		return new Integer(count);
+		return Integer.valueOf(count);
 	}
 	public Integer getInstructionCount(
 		final String aClassId,
