@@ -101,7 +101,7 @@ public class RealValidator implements InternalDatatypeValidator {
 	public void validate(String content) throws InvalidDatatypeValueException {
 	    double d = 0;
         try {
-            d = new Double(content).doubleValue();
+            d = Double.valueOf(content).doubleValue();
         } catch (NumberFormatException nfe) {
             throw new InvalidDatatypeValueException(
 				getErrorString(DatatypeMessageProvider.NotReal,
@@ -127,7 +127,7 @@ public class RealValidator implements InternalDatatypeValidator {
     	    value = (String) facets.get(key);   
 	        double realValue = 0;
 	        try {
-	            realValue = new Double(value).doubleValue();
+	            realValue = Double.valueOf(value).doubleValue();
 	        } catch (NumberFormatException nfe) {
                 facetsAreConsistent = false;
 	        }
@@ -161,7 +161,7 @@ public class RealValidator implements InternalDatatypeValidator {
     	    value = (String) facets.get(key);   
 	        double realValue = 0;
 	        try {
-	            realValue = new Double(value).doubleValue();
+	            realValue = Double.valueOf(value).doubleValue();
 	        } catch (NumberFormatException nfe) {
 	            throw new IllegalFacetValueException(
 					getErrorString(DatatypeMessageProvider.IllegalFacetValue,
@@ -206,7 +206,7 @@ public class RealValidator implements InternalDatatypeValidator {
 	        fEnumValues = new double[v.size()];
 	        for (int i = 0; i < v.size(); i++)
 	            try {
-	                fEnumValues[i] = new Double((String) v.elementAt(i)).doubleValue();
+	                fEnumValues[i] = Double.valueOf((String) v.elementAt(i)).doubleValue();
 	                boundsCheck(fEnumValues[i]);
 	            } catch (InvalidDatatypeValueException idve) {
 	                throw new IllegalFacetValueException(
@@ -250,7 +250,7 @@ public class RealValidator implements InternalDatatypeValidator {
             throw new InvalidDatatypeValueException(
 				getErrorString(DatatypeMessageProvider.OutOfBounds,
 							   DatatypeMessageProvider.MSG_NONE,
-							   new Object [] { new Double(d) }));
+							   new Object [] { Double.valueOf(d) }));
     }
     
     private void enumCheck(double v) throws InvalidDatatypeValueException {
@@ -260,7 +260,7 @@ public class RealValidator implements InternalDatatypeValidator {
 		throw new InvalidDatatypeValueException(
 			getErrorString(DatatypeMessageProvider.NotAnEnumValue,
 						   DatatypeMessageProvider.MSG_NONE,
-						   new Object [] { new Double(v) }));
+						   new Object [] { Double.valueOf(v) }));
     }
 
     /**
